--- a/visualization/Quality_Assessment.ipynb
+++ b/visualization/Quality_Assessment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING! VTK not available. This might limit the functionality.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(0, \"..\")\n",
@@ -61,7 +46,8 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import animation\n",
-    "from random import randint"
+    "from random import randint\n",
+    "import re"
    ]
   },
   {
@@ -75,45 +61,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_path = \"/srv/data/etl/2018_10_23_14_48_20/SAM-SNG-081/1531894347034/pcd/\""
+    "dataset_path = \"/srv/data/etl/2018_10_31_14_19_42/SAM-SNG-087/1540793242066/pcd\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recursive search path"
+    "## Recursive search path and Timestamp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "def path_search(path):\n",
     "    glob_search_path = os.path.join(path, \"**/*.pcd\")\n",
     "    pcd_paths = glob2.glob(glob_search_path)\n",
-    "    # print(\"pcd_paths\", len(pcd_paths))\n",
+    "    pcd_paths = sorted(pcd_paths,key=lambda x: (os.path.splitext(x)[0]))\n",
+    "    print(\"pcd_paths\", len(pcd_paths))\n",
     "    return pcd_paths\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "## find all timestamps. Next step, so that we can look at the pictures ordered by time starting from the most recent one.\n",
-    "def find_timestamps(self):\n",
-    "        \"\"\"\n",
-    "        Finds all timestamp\n",
-    "        \"\"\"\n",
+    "def get_timestamp(path):\n",
+    "    \n",
+    "    f = open(path)\n",
+    "    header = f.readline()\n",
+    "    a = re.findall(r\"[-+]?\\d*\\.\\d+|\\d+\", header)\n",
+    "    timestamp = float(a[2])\n",
+    "    print('Timestamp:', timestamp)\n",
     "\n",
     "#To-do"
    ]
@@ -129,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +162,13 @@
     "    dataset_parameters_pointclouds[\"pointcloud_target_size\"] = 10000\n",
     "    input_shape = (dataset_parameters_pointclouds[\"pointcloud_target_size\"], 3)\n",
     "    output_size = 1\n",
-    "    model_pointnet = modelutils.create_point_net(input_shape, output_size, hidden_sizes = [64])\n",
+    "    model_pointnet = modelutils.create_point_net(input_shape, output_size, hidden_sizes = [512, 256 ,128])\n",
     "    #model_pointnet.summary()\n",
     "    get_model_path()\n",
     "    #         for model_pointnet in model_paths: #the function load_model is not working\n",
     "#             \n",
     "#             model = models.load_model(model_pointnet)\n",
-    "    #model_pointnet.load_weights('../../data/output/20181101-2145-pointnet-model-weights.h5') \n",
+    "    model_pointnet.load_weights('../../data/output/20181101-2145-pointnet-model-weights.h5') \n",
     "    #load_weight gives also an error\n",
     "    return model_pointnet\n",
     "\n"
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -196,55 +186,66 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 10000, 3)          0         \n",
+      "input_8 (InputLayer)         (None, 10000, 3)          0         \n",
       "_________________________________________________________________\n",
-      "lambda_1 (Lambda)            (None, 10000, 3)          0         \n",
+      "lambda_15 (Lambda)           (None, 10000, 3)          0         \n",
       "_________________________________________________________________\n",
-      "conv1d_4 (Conv1D)            (None, 10000, 64)         256       \n",
+      "conv1d_81 (Conv1D)           (None, 10000, 64)         256       \n",
       "_________________________________________________________________\n",
-      "batch_normalization_6 (Batch (None, 10000, 64)         256       \n",
+      "batch_normalization_128 (Bat (None, 10000, 64)         256       \n",
       "_________________________________________________________________\n",
-      "conv1d_5 (Conv1D)            (None, 10000, 64)         4160      \n",
+      "conv1d_82 (Conv1D)           (None, 10000, 64)         4160      \n",
       "_________________________________________________________________\n",
-      "batch_normalization_7 (Batch (None, 10000, 64)         256       \n",
+      "batch_normalization_129 (Bat (None, 10000, 64)         256       \n",
       "_________________________________________________________________\n",
-      "lambda_2 (Lambda)            (None, 10000, 64)         0         \n",
+      "lambda_16 (Lambda)           (None, 10000, 64)         0         \n",
       "_________________________________________________________________\n",
-      "conv1d_9 (Conv1D)            (None, 10000, 64)         4160      \n",
+      "conv1d_86 (Conv1D)           (None, 10000, 64)         4160      \n",
       "_________________________________________________________________\n",
-      "batch_normalization_13 (Batc (None, 10000, 64)         256       \n",
+      "batch_normalization_135 (Bat (None, 10000, 64)         256       \n",
       "_________________________________________________________________\n",
-      "conv1d_10 (Conv1D)           (None, 10000, 128)        8320      \n",
+      "conv1d_87 (Conv1D)           (None, 10000, 128)        8320      \n",
       "_________________________________________________________________\n",
-      "batch_normalization_14 (Batc (None, 10000, 128)        512       \n",
+      "batch_normalization_136 (Bat (None, 10000, 128)        512       \n",
       "_________________________________________________________________\n",
-      "conv1d_11 (Conv1D)           (None, 10000, 1024)       132096    \n",
+      "conv1d_88 (Conv1D)           (None, 10000, 1024)       132096    \n",
       "_________________________________________________________________\n",
-      "batch_normalization_15 (Batc (None, 10000, 1024)       4096      \n",
+      "batch_normalization_137 (Bat (None, 10000, 1024)       4096      \n",
       "_________________________________________________________________\n",
-      "max_pooling1d_3 (MaxPooling1 (None, 1, 1024)           0         \n",
+      "max_pooling1d_24 (MaxPooling (None, 1, 1024)           0         \n",
       "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 1, 64)             65600     \n",
+      "dense_73 (Dense)             (None, 1, 512)            524800    \n",
       "_________________________________________________________________\n",
-      "batch_normalization_16 (Batc (None, 1, 64)             256       \n",
+      "batch_normalization_138 (Bat (None, 1, 512)            2048      \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 1, 64)             0         \n",
+      "dropout_18 (Dropout)         (None, 1, 512)            0         \n",
       "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 1, 1)              65        \n",
+      "dense_74 (Dense)             (None, 1, 256)            131328    \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 1)                 0         \n",
+      "batch_normalization_139 (Bat (None, 1, 256)            1024      \n",
+      "_________________________________________________________________\n",
+      "dropout_19 (Dropout)         (None, 1, 256)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_75 (Dense)             (None, 1, 128)            32896     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_140 (Bat (None, 1, 128)            512       \n",
+      "_________________________________________________________________\n",
+      "dropout_20 (Dropout)         (None, 1, 128)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_76 (Dense)             (None, 1, 1)              129       \n",
+      "_________________________________________________________________\n",
+      "flatten_8 (Flatten)          (None, 1)                 0         \n",
       "=================================================================\n",
-      "Total params: 220,289\n",
-      "Trainable params: 217,473\n",
-      "Non-trainable params: 2,816\n",
+      "Total params: 847,105\n",
+      "Trainable params: 842,625\n",
+      "Non-trainable params: 4,480\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
     "model_pointnet = get_model()\n",
-    "model_pointnet.summary()        \n",
-    "\n"
+    "model_pointnet.summary()       "
    ]
   },
   {
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,6 @@
     "        print(\"Ok we discard it\")\n",
     "        button_standing.close()\n",
     "        button_laying.close()\n",
-    "        ipv.close()\n",
     "        #send to laying\n",
     "        #shutil.copyfile(filePath, laying)\n",
     "        clear_output()\n",
@@ -361,26 +361,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "def quality_check(path):\n",
     "    pcd_paths = path_search(path)\n",
+    "                            \n",
     "    \n",
     "    #we are only going to create one image to avoid slowing down the notebook\n",
-    "    #i = randint(0, len(pcd_paths))\n",
     "    for i in range(len(pcd_paths)):\n",
     "        print(i)\n",
     "        plt.clf\n",
     "        p = pcl.load(pcd_paths[i])\n",
+    "        get_timestamp(pcd_paths[i])\n",
     "        parray = np.asarray(p)\n",
     "        #this line is not working because we couldn't load the model\n",
     "        pred_value = prediction(parray)\n",
     "        real_value = get_target(pcd_paths[i])\n",
-    "    #     standing = Path('standing') \n",
-    "    #     discarded = Path('discarded')\n",
-    "    #     laying = Path('laying')\n",
+    "        #     standing = Path('standing') \n",
+    "        #     discarded = Path('discarded')\n",
+    "        #     laying = Path('laying')\n",
     "\n",
     "\n",
     "        # print(parray[:,1],parray[:,0], parray[:,2])\n",
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,20 +405,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "17\n",
+      "Timestamp: 175.47141882000003\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96cf3d90447f47379f65dcd3317db2bb",
+       "model_id": "c3df3fbad655494694bba66e609727df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,14 +434,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PREDICTED HEIGHT:-0.0154360830783844, REAL HEIGHT: 78.6; ERROR: 78.61543608307838\n",
+      "PREDICTED HEIGHT:90.6602783203125, REAL HEIGHT: 92.0; ERROR: 1.3397216796875\n",
       "Is the picture good?\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11d8d4b5b09a4e0e8cf26eca3fe12d9a",
+       "model_id": "b6f8d118129b454f9169810a2f3c9493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -453,7 +455,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65bb60dfed254d15829544e8f9eb948c",
+       "model_id": "8e8d662ef90e4b1eb773125cb3f28fa2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,6 +470,111 @@
    "source": [
     "next(qc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
