improvements with timestamps

--- a/visualization/Quality_Assessment.ipynb
+++ b/visualization/Quality_Assessment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_path = \"/srv/data/etl/2018_10_31_14_19_42/SAM-SNG-087/1540793242066/pcd\""
+    "#dataset_path = \"/srv/data/etl/2018_10_31_14_19_42/SAM-SNG-087/1540793242066/pcd\""
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,19 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## find all timestamps. Next step, so that we can look at the pictures ordered by time starting from the most recent one.\n",
-    "def get_timestamp(path):\n",
-    "    \n",
-    "    f = open(path)\n",
-    "    header = f.readline()\n",
-    "    a = re.findall(r\"[-+]?\\d*\\.\\d+|\\d+\", header)\n",
-    "    timestamp = float(a[2])\n",
-    "    print('Timestamp:', timestamp)\n",
+    "## User imput for selecting amount of days to be taken into account.\n",
+    "def period():\n",
     "\n",
+    "    import time\n",
+    "\n",
+    "    N = int(input('Select how many days from now you want to check:'))\n",
+    "\n",
+    "    current_milli_time = lambda: int(round(time.time() * 1000))\n",
+    "\n",
+    "    ms = N * 24 *3600 *1000\n",
+    "    end = current_milli_time()    \n",
+    "    start = current_milli_time() - ms    \n",
+    "    return end,start\n",
     "#To-do"
    ]
   },
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,73 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_8 (InputLayer)         (None, 10000, 3)          0         \n",
-      "_________________________________________________________________\n",
-      "lambda_15 (Lambda)           (None, 10000, 3)          0         \n",
-      "_________________________________________________________________\n",
-      "conv1d_81 (Conv1D)           (None, 10000, 64)         256       \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_128 (Bat (None, 10000, 64)         256       \n",
-      "_________________________________________________________________\n",
-      "conv1d_82 (Conv1D)           (None, 10000, 64)         4160      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_129 (Bat (None, 10000, 64)         256       \n",
-      "_________________________________________________________________\n",
-      "lambda_16 (Lambda)           (None, 10000, 64)         0         \n",
-      "_________________________________________________________________\n",
-      "conv1d_86 (Conv1D)           (None, 10000, 64)         4160      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_135 (Bat (None, 10000, 64)         256       \n",
-      "_________________________________________________________________\n",
-      "conv1d_87 (Conv1D)           (None, 10000, 128)        8320      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_136 (Bat (None, 10000, 128)        512       \n",
-      "_________________________________________________________________\n",
-      "conv1d_88 (Conv1D)           (None, 10000, 1024)       132096    \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_137 (Bat (None, 10000, 1024)       4096      \n",
-      "_________________________________________________________________\n",
-      "max_pooling1d_24 (MaxPooling (None, 1, 1024)           0         \n",
-      "_________________________________________________________________\n",
-      "dense_73 (Dense)             (None, 1, 512)            524800    \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_138 (Bat (None, 1, 512)            2048      \n",
-      "_________________________________________________________________\n",
-      "dropout_18 (Dropout)         (None, 1, 512)            0         \n",
-      "_________________________________________________________________\n",
-      "dense_74 (Dense)             (None, 1, 256)            131328    \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_139 (Bat (None, 1, 256)            1024      \n",
-      "_________________________________________________________________\n",
-      "dropout_19 (Dropout)         (None, 1, 256)            0         \n",
-      "_________________________________________________________________\n",
-      "dense_75 (Dense)             (None, 1, 128)            32896     \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_140 (Bat (None, 1, 128)            512       \n",
-      "_________________________________________________________________\n",
-      "dropout_20 (Dropout)         (None, 1, 128)            0         \n",
-      "_________________________________________________________________\n",
-      "dense_76 (Dense)             (None, 1, 1)              129       \n",
-      "_________________________________________________________________\n",
-      "flatten_8 (Flatten)          (None, 1)                 0         \n",
-      "=================================================================\n",
-      "Total params: 847,105\n",
-      "Trainable params: 842,625\n",
-      "Non-trainable params: 4,480\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_pointnet = get_model()\n",
     "model_pointnet.summary()       "
@@ -257,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,11 +229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interface():\n",
+    "def interface(filepath, discarded, standing, laying):\n",
     "    \n",
     "    import os\n",
     "    import shutil\n",
@@ -310,6 +250,10 @@
     "    \n",
     "    def on_button_standing_clicked(b):\n",
     "        print('Standing')\n",
+    "        if (os.path.isfile(standing)==True):\n",
+    "            print('This image was already there')\n",
+    "        else:\n",
+    "            shutil.copyfile(filepath, standing)\n",
     "        button_standing.close()\n",
     "        button_laying.close()\n",
     "        #send to standing\n",
@@ -318,7 +262,11 @@
     "        next(qc)\n",
     "        \n",
     "    def on_button_laying_clicked(b):\n",
-    "        print(\"Ok we discard it\")\n",
+    "        print(\"Laying\")\n",
+    "        if (os.path.isfile(laying)==True):\n",
+    "            print('This image was already there')\n",
+    "        else:\n",
+    "            shutil.copyfile(filepath, laying)\n",
     "        button_standing.close()\n",
     "        button_laying.close()\n",
     "        #send to laying\n",
@@ -336,6 +284,10 @@
     "        \n",
     "    def on_button_no_clicked(b):\n",
     "        print(\"Ok we discard it\")\n",
+    "        if (os.path.isfile(discarded)==True):\n",
+    "            print('This image was already there')\n",
+    "        else:\n",
+    "            shutil.copyfile(filepath, discarded)\n",
     "        button_yes.close()\n",
     "        button_no.close()\n",
     "        #send to discard\n",
@@ -361,115 +313,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quality_check(path):\n",
-    "    pcd_paths = path_search(path)\n",
-    "                            \n",
-    "    \n",
-    "    #we are only going to create one image to avoid slowing down the notebook\n",
-    "    for i in range(len(pcd_paths)):\n",
-    "        print(i)\n",
-    "        plt.clf\n",
-    "        p = pcl.load(pcd_paths[i])\n",
-    "        get_timestamp(pcd_paths[i])\n",
-    "        parray = np.asarray(p)\n",
-    "        #this line is not working because we couldn't load the model\n",
-    "        pred_value = prediction(parray)\n",
-    "        real_value = get_target(pcd_paths[i])\n",
-    "        #     standing = Path('standing') \n",
-    "        #     discarded = Path('discarded')\n",
-    "        #     laying = Path('laying')\n",
+    "def quality_check(directory):\n",
+    "    end,start = period()\n",
     "\n",
+    "    folders = os.listdir(directory)\n",
     "\n",
-    "        # print(parray[:,1],parray[:,0], parray[:,2])\n",
-    "        x,y,z = parray[:,1],parray[:,0], parray[:,2]\n",
-    "        ipv.quickscatter(x,y,z, marker=\"sphere\", size = 0.5)\n",
-    "        ipv.style.use(\"dark\")\n",
-    "        ipv.show()\n",
-    "        print('PREDICTED HEIGHT:{}, REAL HEIGHT: {}; ERROR: {}'.format(pred_value[0][0], real_value, np.abs(pred_value[0][0] - real_value)))\n",
-    "        interface()\n",
-    "        yield"
+    "    for name in folders:    \n",
+    "        subdir = os.path.join(directory,name)    \n",
+    "        r = os.listdir(subdir)\n",
+    "        for i in range(len(r)):\n",
+    "            pathh = os.path.join(subdir, r[i])\n",
+    "            finalpath = os.path.join(pathh, os.listdir(pathh)[1])\n",
+    "\n",
+    "            pcd_paths = path_search(finalpath)\n",
+    "        \n",
+    "            for i in range(len(pcd_paths)):\n",
+    "                print(i)\n",
+    "\n",
+    "                p = pcl.load(pcd_paths[i])\n",
+    "\n",
+    "                parray = np.asarray(p)\n",
+    "                pred_value = prediction(parray)\n",
+    "                real_value = get_target(pcd_paths[i])\n",
+    "                head, tail = os.path.split(pcd_paths[i])\n",
+    "                #PATH HAS TO BE RENAMED, PLEASE CHOOSE THE RIGHT ONE: \n",
+    "                standing = os.path.join('/home/jupyter-padronlv/cgm-ml/visualization/standing', tail)\n",
+    "                discarded = os.path.join('/home/jupyter-padronlv/cgm-ml/visualization/discarded', tail)\n",
+    "                laying = os.path.join('/home/jupyter-padronlv/cgm-ml/visualization/laying', tail)\n",
+    "\n",
+    "                # print(parray[:,1],parray[:,0], parray[:,2])\n",
+    "                x,y,z = parray[:,1],parray[:,0], parray[:,2]\n",
+    "                ipv.quickscatter(x,y,z, marker=\"sphere\", size = 0.5)\n",
+    "                ipv.style.use(\"dark\")\n",
+    "                ipv.show()\n",
+    "                print('PREDICTED HEIGHT: {}, REAL HEIGHT: {}; ERROR: {}'.format(pred_value[0][0], real_value, np.abs(pred_value[0][0] - real_value)))\n",
+    "                interface(pcd_paths[i],discarded, standing, laying)\n",
+    "                yield"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "qc = quality_check(dataset_path)"
+    "directory = \"/srv/data/etl/2018_10_31_14_19_42/\"\n",
+    "qc = quality_check(directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n",
-      "Timestamp: 175.47141882000003\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3df3fbad655494694bba66e609727df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Figure(camera=PerspectiveCamera(fov=46.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PREDICTED HEIGHT:90.6602783203125, REAL HEIGHT: 92.0; ERROR: 1.3397216796875\n",
-      "Is the picture good?\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6f8d118129b454f9169810a2f3c9493",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='yes', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e8d662ef90e4b1eb773125cb3f28fa2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='no', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "next(qc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
