--- a/visualization/Quality_Assessment.ipynb
+++ b/visualization/Quality_Assessment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,9 +180,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_2 (InputLayer)         (None, 10000, 3)          0         \n",
+      "_________________________________________________________________\n",
+      "lambda_3 (Lambda)            (None, 10000, 3)          0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_15 (Conv1D)           (None, 10000, 64)         256       \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_24 (Batc (None, 10000, 64)         256       \n",
+      "_________________________________________________________________\n",
+      "conv1d_16 (Conv1D)           (None, 10000, 64)         4160      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_25 (Batc (None, 10000, 64)         256       \n",
+      "_________________________________________________________________\n",
+      "lambda_4 (Lambda)            (None, 10000, 64)         0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_20 (Conv1D)           (None, 10000, 64)         4160      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_31 (Batc (None, 10000, 64)         256       \n",
+      "_________________________________________________________________\n",
+      "conv1d_21 (Conv1D)           (None, 10000, 128)        8320      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_32 (Batc (None, 10000, 128)        512       \n",
+      "_________________________________________________________________\n",
+      "conv1d_22 (Conv1D)           (None, 10000, 1024)       132096    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_33 (Batc (None, 10000, 1024)       4096      \n",
+      "_________________________________________________________________\n",
+      "max_pooling1d_6 (MaxPooling1 (None, 1, 1024)           0         \n",
+      "_________________________________________________________________\n",
+      "dense_17 (Dense)             (None, 1, 512)            524800    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_34 (Batc (None, 1, 512)            2048      \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 1, 512)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_18 (Dense)             (None, 1, 256)            131328    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_35 (Batc (None, 1, 256)            1024      \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 1, 256)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 1, 128)            32896     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_36 (Batc (None, 1, 128)            512       \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 1, 128)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_20 (Dense)             (None, 1, 1)              129       \n",
+      "_________________________________________________________________\n",
+      "flatten_2 (Flatten)          (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 847,105\n",
+      "Trainable params: 842,625\n",
+      "Non-trainable params: 4,480\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model_pointnet = get_model()\n",
     "model_pointnet.summary()       "
@@ -197,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,20 +408,28 @@
     "                standing = os.path.join('/home/jupyter-padronlv/cgm-ml/visualization/standing', tail)\n",
     "                discarded = os.path.join('/home/jupyter-padronlv/cgm-ml/visualization/discarded', tail)\n",
     "                laying = os.path.join('/home/jupyter-padronlv/cgm-ml/visualization/laying', tail)\n",
-    "\n",
-    "                # print(parray[:,1],parray[:,0], parray[:,2])\n",
-    "                x,y,z = parray[:,1],parray[:,0], parray[:,2]\n",
-    "                ipv.quickscatter(x,y,z, marker=\"sphere\", size = 0.5)\n",
-    "                ipv.style.use(\"dark\")\n",
-    "                ipv.show()\n",
-    "                print('PREDICTED HEIGHT: {}, REAL HEIGHT: {}; ERROR: {}'.format(pred_value[0][0], real_value, np.abs(pred_value[0][0] - real_value)))\n",
-    "                interface(pcd_paths[i],discarded, standing, laying)\n",
-    "                yield"
+    "                \n",
+    "                \n",
+    "                \n",
+    "                if (os.path.isfile(discarded)==True) or (os.path.isfile(standing)==True) or (os.path.isfile(laying)==True):\n",
+    "                    print('This image was already checked')\n",
+    "                    continue\n",
+    "                \n",
+    "                else:\n",
+    "                    x,y,z = parray[:,1],parray[:,0], parray[:,2]\n",
+    "                    ipv.quickscatter(x,y,z, marker=\"sphere\", size = 0.5)\n",
+    "                    ipv.style.use(\"dark\")\n",
+    "                    ipv.show()\n",
+    "                    print('PREDICTED HEIGHT: {}, REAL HEIGHT: {}; ERROR: {}'.format(pred_value[0][0], real_value, np.abs(pred_value[0][0] - real_value)))\n",
+    "                    interface(pcd_paths[i],discarded, standing, laying)\n",
+    "                    yield\n",
+    "                          \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -369,11 +441,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select how many days from now you want to check:445\n",
+      "pcd_paths 48\n",
+      "0\n",
+      "This image was already checked\n",
+      "1\n",
+      "This image was already checked\n",
+      "2\n",
+      "This image was already checked\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e9ae96e005c42d583939be1e04e2d9f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=46.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PREDICTED HEIGHT: 74.51435852050781, REAL HEIGHT: 68.2; ERROR: 6.31435852050781\n",
+      "Is the picture good?\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ddaa4881c06b429db740fa4bc378934e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='yes', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d0a7acb83664f13a569ed0f535468d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='no', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "next(qc)"
    ]
