Add pyntcloud to setup

--- a/skel/01 - Check setup.ipynb
+++ b/skel/01 - Check setup.ipynb
@@ -58,6 +58,10 @@
     "import numpy\n",
     "print(\"numpy:\", numpy.__version__)\n",
     "\n",
+    "# Check pyntcloud.\n",
+    "from pyntcloud import PyntCloud\n",
+    "# print(\"pyntcloud:\", pyntcloud.__version__)\n",
+    "\n",
     "print(\"Success! You are on a very good way!\")"
    ]
   },
